--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 attrs==20.3.0
+coverage==5.4
 importlib-metadata==3.4.0
 iniconfig==1.1.1
 packaging==20.8
@@ -6,6 +7,7 @@ pluggy==0.13.1
 py==1.10.0
 pyparsing==2.4.7
 pytest==6.2.2
+pytest-cov==2.11.1
 SQLAlchemy==1.3.22
 toml==0.10.2
 typing-extensions==3.7.4.3
